--- a/index.html
+++ b/index.html
@@ -4,6 +4,92 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Temukan ragam kopi terbaik dari seluruh dunia di situs kami. Nikmati berbagai informasi tentang proses penggilingan biji kopi, resep minuman kopi yang unik, dan ulasan terbaru tentang peralatan kopi. Jelajahi kelezatan kopi dalam segala bentuknya bersama kami."
+    />
+    <meta
+      name="google-site-verification"
+      content="google2e06363b4ecade57.html"
+    />
+    <meta
+      name="google-site-verification"
+      content="ABK5eHiLNOGU8qRqs-CwX3OpoBSJNGmyRqp_3_zUkH8"
+    />
+    <h1>NgopiBang</h1>
+    <h2>Kopi</h2>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "https://ngopi-bang.vercel.app/",
+        "name": "NgopiBang",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+1-123-456-7890",
+          "contactType": "Customer Service"
+        }
+      }
+    </script>
+
+    <link
+      rel="sitemap"
+      type="application/xml"
+      title="Sitemap"
+      href="/sitemap.xml"
+    />
+    <link rel="robots" href="/robots.txt" />
+    <link rel="canonical" href="https://ngopi-bang.vercel.app/#home" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/products/1.jpg" type="image/x-icon" />
+    <link rel="canonical" href="https://ngopi-bang-ai.vercel.app/" />
+    <link rel="canonical" href="https://ngopi-bang-ai.vercel.app/" />
+
+    <script src="js/analytics.js" />
+
+    <!-- Google Analytics -->
+    <script>
+      (function (i, s, o, g, r, a, m) {
+        i["GoogleAnalyticsObject"] = r;
+        (i[r] =
+          i[r] ||
+          function () {
+            (i[r].q = i[r].q || []).push(arguments);
+          }),
+          (i[r].l = 1 * new Date());
+        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(
+        window,
+        document,
+        "script",
+        "https://www.google-analytics.com/analytics.js",
+        "ga"
+      );
+
+      ga("create", "UA-XXXXX-Y", "auto");
+      ga("send", "pageview");
+    </script>
+
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
+    <!-- End Google Analytics -->
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-MRGZ3YCLD7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-MRGZ3YCLD7");
+    </script>
     <title>NgopiBang</title>
 
     <!-- Fonts -->
